2048-manifest.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"game-2048"}}
    name: game-2048
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"deployment-2048","namespace":"game-2048"},"spec":{"replicas":5,"selector":{"matchLabels":{"app.kubernetes.io/name":"app-2048"}},"template":{"metadata":{"labels":{"app.kubernetes.io/name":"app-2048"}},"spec":{"containers":[{"image":"public.ecr.aws/l6m2t8p7/docker-2048:latest","imagePullPolicy":"Always","name":"app-2048","ports":[{"containerPort":80}]}]}}}}
    name: deployment-2048
    namespace: game-2048
  spec:
    replicas: 3
    selector:
      matchLabels:
        app.kubernetes.io/name: app-2048
    template:
      metadata:
        labels:
          app.kubernetes.io/name: app-2048
      spec:
        containers:
        - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
          imagePullPolicy: Always
          name: app-2048
          ports:
          - containerPort: 80
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"service-2048","namespace":"game-2048"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app.kubernetes.io/name":"app-2048"},"type":"NodePort"}}
    name: service-2048
    namespace: game-2048
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app.kubernetes.io/name: app-2048
    type: NodePort
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip"},"name":"ingress-2048","namespace":"game-2048"},"spec":{"ingressClassName":"alb","rules":[{"http":{"paths":[{"backend":{"service":{"name":"service-2048","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: ingress-2048
    namespace: game-2048
  spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - backend:
            service:
              name: service-2048
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
